// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot when character name is supplied 1`] = `
<Row
  className="your-characters-card-row"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    Test Character
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    <a
      href="http://my-test-character.tumblr.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      my-test-character
    </a>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    15
     
    threads
  </Col>
</Row>
`;

exports[`rendering snapshots should render valid snapshot when character name not supplied 1`] = `
<Row
  className="your-characters-card-row"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    Unnamed Character
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    <a
      href="http://my-test-character.tumblr.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      my-test-character
    </a>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    15
     
    threads
  </Col>
</Row>
`;

exports[`rendering snapshots should render valid snapshot when thread count equals 1 1`] = `
<Row
  className="your-characters-card-row"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    Unnamed Character
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    <a
      href="http://my-test-character.tumblr.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      my-test-character
    </a>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    1
     
    thread
  </Col>
</Row>
`;

exports[`rendering snapshots should render valid snapshot when thread count is > 1 1`] = `
<Row
  className="your-characters-card-row"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    Test Character
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    <a
      href="http://my-test-character.tumblr.com"
      rel="noopener noreferrer"
      target="_blank"
    >
      my-test-character
    </a>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="4"
  >
    15
     
    threads
  </Col>
</Row>
`;
